# RAG_Personalized_Agentic_Tutor

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: System_architecture.excalidraw
frontend/: Homepage.py  app.py
frontend/.streamlit/: config.toml
frontend/components/: auth.py
frontend/pages/: 1_Upload.py  2_Chat.py  3_Dashboard.py
src/: clients.py  config.py
src/api/: main.py
src/api/models/: query.py  upload.py
src/api/routes/: health.py  query.py  upload.py
src/db/: job_store.py  qdrant.py
src/evaluation/: __main__.py  datasets.py  metrics.py  pipeline_wrapper.py  prompts.py  report.py  runner.py
src/ingestion/: enrichment.py  pipeline.py  storage.py  types.py
src/ingestion/chunkers/: __init__.py  base.py  markdown_chunker.py  notes_chunker.py  slide_chunker.py  textbook_chunker.py
src/ingestion/embedders/: __init__.py  dense.py  sparse.py
src/ingestion/loaders/: __init__.py  markdown.py  pdf_scan.py  pdf_slides.py  pdf_textbook.py
src/retrieval/: context.py  generator.py  pipeline.py  prompts.py  query_processor.py  reranker.py  search.py  session.py  utils.py
